# apteka-widget-demo

./: .gitignore  AGENTS.md  CODEMAP_RESTORE.md  Dockerfile  biome.json  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tailwind.config.js
.github/workflows/: docker-image.yml
app/core/: config.py  env.py  errors.py  logging.py
app/data/: allowed_phone_codes.json
app/domain/cart/: entities.py  repository.py  service.py
app/domain/checkout/: entities.py  service.py  validators.py
app/widgets/: add-to-my-cart.html  checkout.html  faq.html  my-cart.html  products.html  theme.html  tracking.html
docs/architecture/: README.md
docs/backend/: README.md
docs/features/: _template.md  cart.md  checkout.md  faq.md  map-picker.md  products.md  search.md  tracking.md
docs/frontend/: standards.md
docs/supabase/: mcp_request_logs.sql
pytest/: __init__.py  __main__.py
ruff/: __init__.py  __main__.py
scripts/quality/: fake-playwright.mjs
test-results/: .last-run.json
tests/: __init__.py  conftest.py  test_cart_tools.py  test_checkout_domain.py  test_checkout_tools.py  test_config.py  test_dockerfile.py  test_docs_consistency.py  test_faq_search_tools.py  test_faq_tools_env.py  test_github_actions_docker.py  test_mcp_fastapi_server.py  test_mcp_request_logging.py  test_mcp_server.py  test_search_products.py  test_search_tools_slug.py  test_theme_tool.py  test_tool_descriptors.py  test_tracking_tools.py  test_widget_templates.py
tests/e2e/: smoke.spec.ts  widget-products.spec.ts
старый проект/: FRONTEND_SPLIT_PLAN.md  ROADMAP.md
(+48 files in other folders)
